src/main/java/com/example/object/bad/ticket/domain/Audience.java
package com.example.object.bad.ticket.domain;

public class Audience {
    private Bag bag;

    public Audience(Bag bag) {
        this.bag = bag;
    }

    public Bag getBag() {
        return bag;
    }
}
